[ADD] Ajouter Article

--- a/WebContent/admin.html
+++ b/WebContent/admin.html
@@ -10,6 +10,6 @@
 		<a href="\ArchSI_Td_Angular\SupprimerArticle.html">Supprimer un article</a>
 		<br/>
 		<br />
-		<a href="\ArchSI_Td_Angular\ModifierrArticle.html">Modifier un article</a>
+		<a href="\ArchSI_Td_Angular\ModifierArticle.html">Modifier un article</a>
 	</body>
 </html> 
