[ADD] Update Article

--- a/WebContent/ModifierArticle.html
+++ b/WebContent/ModifierArticle.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html>
- <head>
-  <title>Modifier un article</title>
- </head>
-<body>
-  <form action="../ArchSI_Td_Angular/rest/articles" method="POST">
+<form action="../ArchSI_Td_Angular/rest/article" method="POST">
+
+<label for="id">Article Id</label>
+  <input name="id" />
+  <br/>
+
   <label for="libelle">Libelle</label>
   <input name="libelle" />
   <br/>
@@ -23,7 +22,6 @@
   
   
   <input type="submit" value="Submit" />
-  </form>
-</body>
-</html> 
+</form>
+
 
