--- a/WebContent/AjoutArticle.html
+++ b/WebContent/AjoutArticle.html
@@ -9,6 +9,10 @@
   <input name="libelle" />
   <br/>
   
+  <label for="brand">Brand</label>
+  <input name="brand" />
+  <br/>
+  
   <label for="price">Price</label>
   <input type="number" NAME="price">
   <br/>
