--- a/WebContent/shop.html
+++ b/WebContent/shop.html
@@ -23,7 +23,7 @@
                 </h4>
                 <h5 class="articlePrice">$24.99</h5>
                 <p class="card-text articleCategory">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam aspernatur!</p>
-                <button class="btn btn-info">Modifier</button>
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#ModifierModal">Modifier</button>
                 <button class="btn btn-primary">Supprimer</button>
               </div>
             </div>
@@ -57,4 +57,32 @@
     });
   });
 </script>
+
+
+<!-- Modifier un article modal -->
+
+<!-- Modal -->
+<div class="modal fade" id="ModifierModal" tabindex="-1" role="dialog" aria-labelledby="ModifierModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="ModifierModalLabel">Modifier un article</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <embed src="ModifierArticle.html">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- Fin Modifier un article -->
+
+
 </html>
